--- a/assets/css/bpgsites.css
+++ b/assets/css/bpgsites.css
@@ -12,6 +12,13 @@ Provide basic styles for plugin elements
 --------------------------------------------------------------------------------
 */
 
+
+
+/*
+--------------------------------------------------------------------------------
+Default styles for filtering comments
+--------------------------------------------------------------------------------
+*/
 #bpgsites-post-in-box
 {
 	display: block;
@@ -35,5 +42,36 @@ div.bpgsites_group_filter form
 {
 	display: block;
 }
+
+
+
+/*
+--------------------------------------------------------------------------------
+Default styles for filtering group linkages
+--------------------------------------------------------------------------------
+*/
+.bpgsites_group_linkage
+{
+	clear: both;
+}
+
+.bpgsites_group_linkages
+{
+	border: 1px solid #eee;
+	padding: 1em;
+}
+
+.bpgsites_linked_group
+{
+	display: block;
+}
+
+.bpgsites_linked_group_label
+{
+	display: inline-block;
+	cursor: pointer;
+	margin: 0;
+}
+
 
 
