set default styling for "posted in" links

--- a/assets/css/bpgsites.css
+++ b/assets/css/bpgsites.css
@@ -135,6 +135,17 @@ Default styles for comment amendments
 	margin: 0.7em 0;
 }
 
+.bpgsites_comment_posted_in a:focus
+{
+	text-decoration: underline;
+}
+
+.bpgsites_comment_posted_in a,
+.bpgsites_comment_posted_in a:active
+{
+	text-decoration: none;
+}
+
 
 
 /*
