Show some love to inline comments

--- a/assets/css/bpgsites-admin.css
+++ b/assets/css/bpgsites-admin.css
@@ -7,7 +7,7 @@ AUTHOR: Christian Wach <needle@haystack.co.uk>
 NOTES
 =====
 
-Provide basic styles for plugin elements
+Provide basic styles for plugin elements.
 
 --------------------------------------------------------------------------------
 */
